--- a/src/pages/myPage/myPage.css
+++ b/src/pages/myPage/myPage.css
@@ -2,11 +2,22 @@
     box-sizing: border-box;
   }
   
+  body, html {
+    margin: 0;
+    padding: 0;
+  }
+  
+
+  button {
+    all: unset; /* 기본 스타일 초기화 */
+  }
+  
   .my-page { /* 페이지 전체 속성 */
       font-family: Arial, sans-serif; /*프리텐다드 사용해야됨*/
       width:100%;
       max-width: 100vw;
       margin: auto;
+      padding: 0;
     }
    
     .profile-section {
@@ -45,7 +56,7 @@
       justify-content: center; /* 위에서부터 차례대로 배치 */
       position: relative;
       margin-top: 50px;
-      align-items: relative;
+      align-items: center;
     }
   
     .nickname {
@@ -53,7 +64,7 @@
       font-style: normal;
       font-weight: 700;
       margin-bottom: 6px;
-      width: 144px; /* 고정 너비 */
+      width: 202px; /* 고정 너비 */
       text-align: center; /* 텍스트 가운데 정렬 (선택 사항) */
       white-space: nowrap;
       box-sizing: border-box;
@@ -63,14 +74,27 @@
       font-size: 10px;
       font-style: normal;
       font-weight: 500;
-      letter-spacing: -0.11px;
       margin-bottom: 25px;
     }
   
-    .button-logout {
-      font-size: 10px;
-      font-style: normal;
-      font-weight: 500;
+    .logout-button {
+      display: flex; /* 아이템을 나란히 배치 */
+      align-items: center; /* 수직 정렬 */
+      background: transparent; /* 투명한 배경 */
+      border: none; /* 테두리 없음 */
+      padding: 0; /* 기본 패딩 제거 */
+      cursor: pointer; /* 커서를 버튼처럼 보이게 */
+    }
+    
+    .logout-icon {
+      width: 19px; /* 이미지 너비 */
+      height: 19px; /* 이미지 높이 */
+      margin-right: 8px; /* 이미지와 텍스트 사이의 간격 */
+    }
+    
+    .logout-text {
+      font-size: 10px; /* 텍스트 크기 */
+      color: #000; /* 텍스트 색상 (원하는 색으로 변경 가능) */
     }
   /* 배지 */
     .badge-section {
@@ -81,6 +105,9 @@
       box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
       z-index: 3;
       margin-bottom: 68px;
+      display: flex;
+      flex-direction: row;
+      gap: 10px;
     }
   
     .badge {
