--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,17 @@
 
+/*글씨체 설정 : 기본은 pretendard variable*/
+@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css");
+/* 위의 사이트가 되는한 pretendard가 로딩되고 그 이후로 디폴트를 순서대로 명세*/
+body{
+font-family: "Pretendard Variable", Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
+}
+
 /* 모바일 화면에 대한 스타일 */
 @media (max-width: 768px) {
   /* 모바일 규격에서 적용할 스타일 */
   body {
-    /* 예시 스타일 */
-    background-color: rgb(15, 144, 186);
+    /*모바일, 데스크톱 규격확인 먼가 하고싶으면 이 색 바꾸시면 됩니다*/
+    background-color: #F5F5F5;
   }
 
   /* 다른 모바일 전용 스타일을 여기에 추가 */
@@ -14,6 +21,6 @@
 @media (min-width: 769px) {
   /* 데스크탑 전용 스타일 */
   body {
-    background-color: whitesmoke;
+    background-color: #F5F5F5;
   }
 }
