--- a/src/pages/scheduleRequest/SingleNroutine.css
+++ b/src/pages/scheduleRequest/SingleNroutine.css
@@ -1,6 +1,7 @@
 /* 기본 레이아웃 설정 */
 body {
     margin: 0;
+    font-family: Arial, sans-serif;
     background-color: #f5f5f5;
     display: flex;
     justify-content: center;
