--- a/src/global/BottomNav.css
+++ b/src/global/BottomNav.css
@@ -1,82 +1,84 @@
 /* 기본 하단바 스타일 */
 .wrapper {
-    position: fixed; /*항상 화면 고정*/
-    bottom: 0; /* 바닥에 고정 */
-    height: 45px;
+  position: fixed; /*항상 화면 고정*/
+  bottom: 0; /* 바닥에 고정 */
+  height: 45px;
 
-    /* 래퍼 안에서 버튼 배치*/
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-.smaller-text{
-  font-size : 9px;
+  /* 래퍼 안에서 버튼 배치*/
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
+.smaller-text {
+  font-size: 9px; /* 폰트 크기 설정 */
+  line-height: normal; /* 줄 간격 조정, 필요시 */
+  text-align: center; /* 텍스트 중앙 정렬, 필요시 */
+}
+
 
 nav > button img {
-    margin: 0 0 8px 0; /* 위쪽 0, 오른쪽 0, 아래쪽 15px, 왼쪽 0 */
+  margin: 0 0 8px 0; /* 위쪽 0, 오른쪽 0, 아래쪽 15px, 왼쪽 0 */
 }
 
-  /* 모바일 화면에 대한 스타일 */
-  @media (max-width: 420px) {
-    .wrapper {
-      height: 60px; /* 모바일에서 적절한 높이 설정 */
-      width: 393px;
-      background-color: #ffffff; /* 마찬가지로 피그마에 맞춰두겠습니다~! */
-    }
-    /*nav안의 버튼*/
-    nav > .nav-button {
-      width: 59px; /* 데스크탑에서 버튼 크기 유지 */
-      height: 67px;
-      margin: 0 6.5px; /*좌우 간격 6.5px */
-      font-size: 11px;
-      background-color: #F4F4F4;
-
-      display: flex; 
-      flex-direction: column; 
-      align-items: center; 
-      justify-content: center; /* 수직 정렬 */
-      text-decoration: none; /* 링크 스타일 제거 */
-      color: inherit; /* 부모 요소의 색상 상속 */
-
-      border-radius: 10px;
-      box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.25);
-    }
-    nav > .nav-button:hover {
-      border : 0px solid #FFB600;
-      background: var(--Color-3, #F8D785);
-    }
+/* 모바일 화면에 대한 스타일 */
+@media (max-width: 420px) {
+  .wrapper {
+    height: 60px; /* 모바일에서 적절한 높이 설정 */
+    width: 393px;
+    background-color: #ffffff; /* 마찬가지로 피그마에 맞춰두겠습니다~! */
   }
-  
-  /* 데스크탑 화면에 대한 스타일 */
-  @media (min-width: 421px) {
-    .wrapper {
-      height: 80px; /* 데스크탑에서 적절한 높이 설정 */
-      background-color: #ffffff; /* 디폴트로 일단 맞춰둠. 구분되는지 확인하고 싶으면 바꾸시면 됩니다. */
-      width: 393px;
-    }
-  
-    nav > .nav-button {
-      width: 59px; /* 데스크탑에서 버튼 크기 유지 */
-      height: 67px;
-      margin: 0 6.5px; /*좌우 간격 6.5px */
-      font-size: 11px;
-      background-color: #F4F4F4;
+  /*nav안의 버튼*/
+  nav > .nav-button {
+    width: 59px; /* 데스크탑에서 버튼 크기 유지 */
+    height: 67px;
+    margin: 0 6.5px; /*좌우 간격 6.5px */
+    font-size: 11px;
+    background-color: #F4F4F4;
 
-      display: flex; 
-      flex-direction: column; 
-      align-items: center; 
-      justify-content: center; /* 수직 정렬 */
-      text-decoration: none; 
-      color: inherit; 
-      border-radius: 10px;
-      box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.25);
-    }
+    display: flex; 
+    flex-direction: column; 
+    align-items: center; 
+    justify-content: center; /* 수직 정렬 */
+    text-decoration: none; /* 링크 스타일 제거 */
+    color: inherit; /* 부모 요소의 색상 상속 */
 
-    nav > .nav-button:hover {
-      border : 0px solid #FFB600;
-      background: var(--Color-3, #F8D785);
-    }
+    border-radius: 10px;
+    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.25);
   }
-  
+  nav > .nav-button:hover {
+    border : 0px solid #FFB600;
+    background: var(--Color-3, #F8D785);
+  }
+}
+
+/* 데스크탑 화면에 대한 스타일 */
+@media (min-width: 421px) {
+  .wrapper {
+    height: 80px; /* 데스크탑에서 적절한 높이 설정 */
+    background-color: #ffffff; /* 디폴트로 일단 맞춰둠. 구분되는지 확인하고 싶으면 바꾸시면 됩니다. */
+    width: 393px;
+  }
+
+  nav > .nav-button {
+    width: 59px; /* 데스크탑에서 버튼 크기 유지 */
+    height: 67px;
+    margin: 0 6.5px; /*좌우 간격 6.5px */
+    font-size: 11px;
+    background-color: #F4F4F4;
+
+    display: flex; 
+    flex-direction: column; 
+    align-items: center; 
+    justify-content: center; /* 수직 정렬 */
+    text-decoration: none; 
+    color: inherit; 
+    border-radius: 10px;
+    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.25);
+  }
+
+  nav > .nav-button:hover {
+    border : 0px solid #FFB600;
+    background: var(--Color-3, #F8D785);
+  }
+}
