로그인 쿠키로 시도중

--- a/src/pages/scheduleRequest/SingleNRoutine.css
+++ b/src/pages/scheduleRequest/SingleNRoutine.css
@@ -37,7 +37,7 @@ body {
     display: flex;
     background-color: #F8D785; /* 노란 배경 */
     border-radius: 20px;
-    padding: 5px;
+    align-items: center;
     width: 285px;
     height: 42px;
     justify-content: space-between;
@@ -50,6 +50,7 @@ body {
     width: 128px;
     height: 30px;
     font-size: 15px;
+    font-weight: 300;
     border: none;
     border-radius: 20px;
     background-color: transparent; /* 기본: 투명 배경 */
@@ -82,9 +83,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 1px solid #ddd;
     border-radius: 10px;
-    background-color: #fafafa;
+    margin-top: 170px;
   }
 
   .placeholder {
@@ -117,4 +117,118 @@ body {
     cursor: pointer;
     text-align: center;
     margin: 0 auto;
+  }
+
+  .time-select {
+    width: 240px;
+    display: flex;
+    justify-content: space-between;
+    margin-left: 100px;
+    margin-bottom: 8px;
+  }
+
+  .time-selecter{
+    background-color: #f2f2f2;
+    border-radius: 10px;
+    width: 85px;
+    height: 35px;
+    font-size: 15px;
+    font-weight: 100;
+    border: none;
+    text-align: center;
+    color: #999;
+  }
+
+  .start-label{
+    display: flex;
+    width: 59px;
+    height: 35px;
+    border-radius: 10px;
+    background-color: #FF8581;
+    color: #fff;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    font-size: 15px;
+    font-weight: 400;
+    margin-right: 10px;
+    }
+
+    .end-label{
+      display: flex;
+      width: 59px;
+      height: 35px;
+      border-radius: 10px;
+      background-color: #7695FF;
+      color: #fff;
+      text-align: center;
+      align-items: center;
+      justify-content: center;
+      font-size: 15px;
+      font-weight: 400;
+      margin-right: 10px;
+      }
+
+      .rutine-section {
+        margin-top: -70px;
+      }
+
+      .rutine-title {
+        font-size: 20px;
+        font-weight: 500;
+        margin-bottom: 15px;
+      }
+
+      .rutine-title2 {
+        font-size: 20px;
+        font-weight: 500;
+        margin-bottom: 15px;
+        margin-top: 100px;
+      }
+
+      
+
+    .recurring-button {
+      width: 85px;
+      height: 88px;
+      border-radius: 20px;
+      background-color: #fff;
+      border: #999;
+      box-shadow: 0px 0px 6px 1px rgba(0, 0, 0, 0.25);
+      margin: 5px;
+    }
+
+    .recurring-button.active {
+      background-color: #F8D785;
+    }
+
+    .time-select2 {
+      width: 240px;
+      display: flex;
+      justify-content: space-between;
+      margin-left: 22px;
+      margin-bottom: 8px;
+    }
+
+    .rutine-num{
+      font-size: 30px;
+      font-style: normal;
+      font-weight: 300;
+    }
+
+    .rutine-ex{
+      font-size: 12px;
+      font-style: normal;
+      font-weight: 300;
+    }
+
+  .submit-button {
+    margin-top: 150px;
+    width: 276px;
+    height: 43.74px;
+    border-radius: 10px;
+    background-color: #000;
+    color: #fff;
+    font-size: 14px;
+    font-weight: 500;
   }
