--- a/src/pages/scheduleRequest/SingleNRoutine.css
+++ b/src/pages/scheduleRequest/SingleNRoutine.css
@@ -11,6 +11,7 @@ body {
   .app-container {
     width: 393px;
     background-color: white;
+    z-index: -1;
   }
 
   .page-title {
@@ -176,6 +177,7 @@ body {
       .rutine-title {
         font-size: 20px;
         font-weight: 500;
+        margin-top: 50px;
         margin-bottom: 15px;
       }
 
@@ -183,7 +185,7 @@ body {
         font-size: 20px;
         font-weight: 500;
         margin-bottom: 15px;
-        margin-top: 100px;
+        margin-top: 150px;
       }
 
       
@@ -223,7 +225,8 @@ body {
     }
 
   .submit-button {
-    margin-top: 150px;
+    position: relative;
+    top: 180px;
     width: 276px;
     height: 43.74px;
     border-radius: 10px;
@@ -232,3 +235,30 @@ body {
     font-size: 14px;
     font-weight: 500;
   }
+
+  .loading-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgb(255, 255, 255);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    z-index: 1000;
+    pointer-events: none;
+  }
+
+  .loading-text {
+    text-align: center;
+    font-size: 20px;
+    font-weight: 600;
+  }
+
+  .loading-image {
+    width: 250px;
+    height: 250px;
+  }
+  
