--- a/src/pages/scheduleRequest/DetailWorks.css
+++ b/src/pages/scheduleRequest/DetailWorks.css
@@ -157,7 +157,7 @@
     border: 0.5px solid #d9d9d9;
  }
  
- .submit-button {
+ .submit-button2 {
     position: relative;
     top: 50px;
     width: 276px;
@@ -168,4 +168,5 @@
     font-size: 14px;
     font-weight: 500;
     color: #000;
+    margin-bottom: 100px;
  }
