--- a/src/pages/scheduleRequest/DetailWorks.css
+++ b/src/pages/scheduleRequest/DetailWorks.css
@@ -10,6 +10,7 @@
     font-size: 18px;
     font-weight: 300;
     margin-bottom: 20px;
+    margin-left: 10px;
 }
 
 .sec-title3 {
@@ -131,9 +132,9 @@
     display: inline-block;
     margin: 10px;
     padding: 10px;
-    border-radius: 10px;
+    border-radius: 50%;
     background-color: #fff;
-    border: 1px solid #ccc;
+    border: none;
     cursor: pointer;
     text-align: center;
   }
@@ -141,6 +142,11 @@
   .user-button img {
     border-radius: 50%;
     margin-bottom: 5px;
+  }
+
+  .selected-fam{
+    font-size: 15px;
+    font-weight: 200;
   }
 
  .user-selection-section {
