--- a/src/pages/scheduleRequest/DetailWorks.css
+++ b/src/pages/scheduleRequest/DetailWorks.css
@@ -2,21 +2,21 @@
 .sec-title1{
     font-size: 18px;
     font-weight: 300;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin-top: 150px;
+    margin-bottom: 5px;
 }
 
 .sec-title2{
     font-size: 18px;
     font-weight: 300;
-    margin-bottom: 20px;
+    margin-bottom: 5px;
     margin-left: 10px;
 }
 
 .sec-title3 {
     font-size: 18px;
     font-weight: 500;
-    margin-bottom: 40px;
+    margin-bottom: 10px;
 }
 
 /* 카테고리와 상세업무 버튼들이 들어갈 섹션 */
@@ -28,7 +28,7 @@
     justify-items: center;                /* 가로 정렬 */
     width: 260px;
     height: auto;
-    margin-bottom: 50px;                          /* 높이는 자동으로 조정 */
+    margin-bottom: 20px;                          /* 높이는 자동으로 조정 */
   }
   
   .details-section {
@@ -39,7 +39,7 @@
     justify-items: center;                /* 가로 정렬 */
     width: 260px;
     height: auto;
-    margin-bottom: 10px;                          /* 높이는 자동으로 조정 */
+    margin-bottom: 0px;                          /* 높이는 자동으로 조정 */
   }
 
   /* 카테고리와 상세업무 버튼의 스타일 */
@@ -125,14 +125,16 @@
   }
 
   .user-button.active {
-    box-shadow: 4px #F8D785;
+    box-shadow: 0px 0px 10px 4px #F8D785;
   }
   
   .user-button {
-    display: inline-block;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     margin: 10px;
-    padding: 10px;
-    border-radius: 50%;
+    border-radius: 10px;
     background-color: #fff;
     border: none;
     cursor: pointer;
@@ -150,12 +152,12 @@
   }
 
  .user-selection-section {
-    margin-bottom: 80px;
+    margin-bottom: 20px;
  }
 
  .memo-input{
     width: 280px;
-    height: 149px;
+    height: 100px;
     font-size: 13px;
     font-weight: 100;
     border-radius: 20px;
@@ -174,5 +176,5 @@
     font-size: 14px;
     font-weight: 500;
     color: #000;
-    margin-bottom: 100px;
+    margin-bottom: 50px;
  }
